# internet-reloader

./: Cargo.toml  README.md  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: ci.yml
internet_reloader/: all.html  index.html  sidebar-items.js
internet_reloader/app/: enum.NetworkStatus.html  index.html  sidebar-items.js  struct.NetworkApp.html
internet_reloader/internet_connectivity/: index.html  sidebar-items.js  struct.WindowsInternetConnectivity.html  trait.InternetConnectivity.html
internet_reloader/internet_connectivity/interface/: trait.InternetConnectivity.html
internet_reloader/internet_connectivity/windows/: struct.WindowsInternetConnectivity.html
internet_reloader/network_manager/: index.html  sidebar-items.js  struct.WindowsNetworkManager.html  struct.WlanApiImpl.html  trait.NetworkManager.html  trait.WlanApi.html
internet_reloader/network_manager/interface/: trait.NetworkManager.html
internet_reloader/network_manager/windows/: struct.WindowsNetworkManager.html  struct.WlanApiImpl.html  trait.WlanApi.html
search.desc/internet_reloader/: internet_reloader-desc-0-.js
src/: app.rs  lib.rs  main.rs
src/internet_connectivity/: interface.rs  mod.rs  windows.rs
src/internet_reloader/: app.rs.html  lib.rs.html
src/internet_reloader/internet_connectivity/: interface.rs.html  mod.rs.html  windows.rs.html
src/internet_reloader/network_manager/: interface.rs.html  (+2 more)
src/network_manager/: interface.rs  mod.rs  windows.rs
tests/: test_app.rs  test_network_manager.rs
(+14 files in other folders)
