[package]
name = "internet_reloader"
version = "0.1.0"
edition = "2024"
readme = "README.md"
authors = ["Chris Hulme"]
description = "A Rust application to monitor internet connectivity and manage network connections on Windows."

[dependencies]
cfg-if = "1.0.3"
windows = { version = "0.62.1", features = ["Win32_Networking_WinInet"] }
mockall = "0.13.1"